# bristle

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app_modal.rs  app_state.rs  app_status.rs  app_task.rs  app_update.rs  app_window.rs  main.rs
cleaner/: Cargo.toml
cleaner/src/: app_data.rs  foundation.rs  helpers.rs  lib.rs  syscom.rs
cleaner/src/app_data/: app_info.rs  app_process.rs  locations_scan.rs  log_receipt.rs
cleaner/src/foundation/: ns_file_manager.rs  ns_kill_process.rs
cleaner/src/syscom/: sys_component.rs
cleaner/tests/: scanner_test.rs
common-debug/: Cargo.toml
common-debug/src/: lib.rs
status/: Cargo.toml
status/src/: lib.rs  status_channel.rs  status_event.rs
widget/: Cargo.toml
widget/src/: drop_file.rs  lib.rs  list_view.rs
