[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "Bristle"
path = "src/main.rs"

[dependencies]
common-debug = { path = "../common-debug" }
widget = { path = "../widget" }
status = { path = "../status" }
cleaner = { path = "../cleaner" }
log = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
iced = { workspace = true }


[package.metadata.bundle.bin.Bristle]
name = "Bristle"
identifier = "com.ziprangga.Bristle"
icon = ["assets/Bristle.icns"]
version = "0.1.0"
# resources = ["assets"]
copyright = "Copyright (c) ziprangga 2026. All rights reserved."
category = "Utilities"
short_description = "Application Uninstaller"
